--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>Becalos</title>
 </head>
 <body>
-    <h1>¿Que prefieres?</h1>
-    <a href="paginas/calor.html" target="_blank">Calor</a>
-    <a href="paginas/frio.html" target="_blank">Frio</a>
+    <main>
+        <h1>¿Que prefieres?</h1>
+        <section>
+            <button><a href="paginas/calor.html" target="_blank">Calor</a></button>
+            <button><a href="paginas/frio.html" target="_blank">Frio</a></button>
+        </section>
+    </main>
+
+    <footer>
+       <h2> gracias por su tiempo</h2>
+    </footer>
+   
 </body>
 </html>
