CAMBIOS: -carousel funcional -botones funcionales -nuevos colores

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="texto1">
             <h1>¡LOS MEJORES PASTELES PARA TODA LA OCASION!</h1>
                 <h3>YIYE'S CAKE SHOP</h3>
-                <button>ORDENA AHORA</button>
+                <a href="#carrito"><button>ORDENA AHORA</button></a>
         </div>
         <span class="image-hero">
             <img src="images/cakes-hero.png" alt="pastel1" class="slide-active">
